# get-vanity-address-solana

./: Cargo.toml  README.md  data.json  test_examples.sh
src/: main.rs
