[package]
name = "vanity-address"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vanity-address"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.17"
base58 = "0.2"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
num_cpus = "1.16"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
